<resources>
    <string name="app_name">ExerciseConvertini</string>
    <string name="action_settings">Settings</string>
    <string name="Api_KEY">LSbxZBbyGHytZE_4jZ-x9xsQCaQUyQ==QEBTM2xsRk9yQXBpVDE0MSEhMTI2ISE=</string>
    <string name="SERVER_URL">https://api.sellf.io/v2/</string>
    <string name="empty_list_text">Errore di connessione. &#xD;Riprova più tardi</string>
    <string name="EXTRA_PERSON_ID">extra_person_id</string>
    <string name="AUTORIZZAZIONE_NEGATA">Non sei autorizzato</string>
    <string name="filtri">Filtra per</string>
    <string name="sortBy">Ordina per</string>
    <string name="rimuovi_filtri">Azzera</string>
    <string name="mostra_risultati">Applica</string>
    <string name="ordina_per">Ordina per</string>
    <string name="cognome">Cognome</string>
    <string name="name">Nome</string>
    <string name="EXTRA_PEOPLE_LIST">extra_people_list</string>
    <string name="filters">Filtra</string>
    <string name="telefono">Telefono</string>
    <string name="ruolo">Ruolo</string>
    <string name="skype">Skype</string>
    <string name="email">email</string>
    <string name="indirizzo">indirizzo</string>


</resources>
