<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/filtersTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="6dp"
            android:text="@string/filtri"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name_filter_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_filter_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="6dp"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cognome_filter_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filtersTitle" />

        <EditText
            android:id="@+id/cognome_filter_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cognome"
            android:inputType="text"
            android:padding="6dp"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/sort_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_filter_title" />

        <TextView
            android:id="@+id/sort_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="6dp"
            android:text="@string/sortBy"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cognome_filter_title" />

        <!--<RadioGroup
            android:id="@+id/sortByRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sort_title">-->

            <CheckBox
                android:id="@+id/sortByCB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cognome"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textStyle="bold"
                android:buttonTint="@color/colorPrimary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sort_title"/>
        <!--</RadioGroup>-->

        <Button
            android:id="@+id/removeFiltersBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/rimuovi_filtri"
            android:textAllCaps="true"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/showResultsBtn" />

        <Button
            android:id="@+id/showResultsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/mostra_risultati"
            android:textAllCaps="true"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/removeFiltersBtn"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
